crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__generate__tests__generate_with_event.snap
---
source: crates/vize_atelier_vapor/src/generate.rs
expression: result.code.as_str()
---
import { createInvoker as _createInvoker, delegateEvents as _delegateEvents, template as _template } from 'vue';
const t0 = _template("<button>Click</button>", true)
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  n0.$evtclick = _createInvoker(e => _ctx.handleClick(e))
  return n0
}
